# PySwiftBackends

./: pyproject.toml
src/pyswiftbackends/: __init__.py  standard_backend.py
src/pyswiftbackends/admob4kivy/: __init__.py
src/pyswiftbackends/kivy3launcher/: __init__.py
src/pyswiftbackends/kivy_reloader/: __init__.py
src/pyswiftbackends/kivylauncher/: __init__.py
src/pyswiftbackends/py_corebluetooth/: __init__.py
src/pyswiftbackends/pyframework/: __init__.py
src/pyswiftbackends/sdl2/: __init__.py
src/pyswiftbackends/sdl3/: __init__.py
src/pyswiftbackends/swiftui_normal/: __init__.py
src/pyswiftbackends/swiftui_normal/files/: Environment.swift  LaunchPython.swift
