[project]
name = "pyswiftbackends"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PythonSwiftLink", email = "107263226+PythonSwiftLink@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pip>=25.2",
    "requests>=2.32.4",
    "sh>=2.2.2",
    "toml>=0.10.2",
]



[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
backend-tools = { git = "https://github.com/Py-Swift/PSBackend" }

# they are automatic included when uv sync, and need to specify --no-dev to exclude them
# which psproject export part will add from now on...
[dependency-groups]
dev = [
    "backend-tools>=0.1.1",
    "pip>=25.2",
]
